--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -25,13 +25,16 @@ body {
 }
 
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    // padding-top: 94px;
+    // padding-bottom: 94px;
 }
 
 .container {
     margin: 0 auto;
-    width: 1200px;
+    width: 100%;
+    // width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
 }
