--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,10 +1,15 @@
-/* .clients {
-} */
-.clients__title {
-    margin-bottom: 50px;
+// .clients { 
+// } 
 
-    font-size: 36px;
-    line-height: calc(42 / 36);
+.clients__title {
+
+    margin-bottom: 30px;   
+ // margin-bottom: 50px;
+
+    font-size: 28px;
+    line-height: calc(33 / 28);
+    // font-size: 36px;
+    // line-height: calc(42 / 36);
     text-align: center;
     letter-spacing: 0.03em;
 
@@ -12,11 +17,13 @@
 }
 .clients__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
 }
 .clients__item {
-    flex-basis: calc((100% - 150px) / 6);
-    width: 170px;
+    flex-basis: calc((100% - 30px) / 2);
+    // flex-basis: calc((100% - 150px) / 6);
+    max-width: 210px;
     height: 92px;
 }
 .clients__item-link {
