--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,13 +6,33 @@
 
 .footer__container {
     display: flex;
+    flex-wrap: wrap;
     gap: 70px;
     align-items: baseline;
+
+    @media screen and (max-width:480px) {
+        justify-content: center;
+    }
 }
 
-/* .footer__contacts{} */
+.footer__logo {
+    margin-bottom: 20px;
 
-/* .footer__address{} */
+    @media screen and (max-width:480px) {
+        margin-bottom: 28px;
+
+        text-align: center;
+    }
+}
+
+.footer__contacts{
+}
+
+.footer__address{
+    @media screen and (max-width:480px) {
+        text-align: center;
+    }
+}
 
 /* .footer__join{} */
 
