--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,11 +4,19 @@
     line-height: 1.14;
 
     border-bottom: 1px solid #ececec;
+
+
 }
 
 .header__container {
     display: flex;
     align-items: center;
+}
+
+.navigation-wrap{
+    @media screen and (max-width:480px) {
+        display: none;
+    }
 }
 
 .header__navigation {
