--- a/sass/components/_join.scss
+++ b/sass/components/_join.scss
@@ -9,6 +9,10 @@
     text-transform: uppercase;
 
     color: #ffffff;
+
+    @media screen and (max-width:480px) {
+        text-align: center;
+    }
 }
 .socials__item-link--bg-gray-col-white {
     background-color: rgba(255, 255, 255, 0.1);
