--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,10 +3,13 @@
 }
 
 .team__title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    // margin-bottom: 50px;
 
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: calc(33 / 28);
+    // font-size: 36px;
+    // line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
@@ -14,13 +17,15 @@
 
 .team__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
 
     background: inherit;
 }
 
 .team__list-item {
-    width: calc((100% - 90px) / 4);
+    width: 100%;
+    // width: calc((100% - 90px) / 4);
 }
 
 .team-member {
@@ -32,7 +37,10 @@
 }
 
 .team-member__content {
-    padding: 30px 32px;
+    padding-top: 30px;
+    padding-bottom: 24px;
+
+    // padding: 30px 32px;
 }
 
 .team-member__title {
