--- a/css/main.css
+++ b/css/main.css
@@ -126,12 +126,13 @@ input:-webkit-autofill {
 }
 
 .header__container {
+  position: relative;
   display: flex;
   align-items: center;
 }
 
 .menu {
-  display: none;
+  display: flex;
 }
 @media screen and (max-width: 480px) {
   .menu {
@@ -185,7 +186,7 @@ input:-webkit-autofill {
 
 .menu__contacts {
   display: flex;
-  gap: 50px;
+  flex-direction: column;
 }
 
 .menu__contacts-link {
@@ -196,6 +197,116 @@ input:-webkit-autofill {
 
 .menu__contacts-icon {
   fill: currentColor;
+}
+
+.mobile-menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #fff;
+  transform: translateX(100%);
+}
+.mobile-menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 40px;
+  min-height: 40px;
+  background: transparent;
+}
+
+@media screen and (min-width: 481px) {
+  .menu-toggle--open {
+    display: none;
+  }
+}
+
+.mobile-menu {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.mobile-navigation__list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.mobile-navigation__list-link {
+  display: block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mobile-menu__contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts-item {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.mobile-menu__contacts-item:first-child {
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mobile-menu__contacts-link {
+  display: block;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  letter-spacing: inherit;
+  color: inherit;
+}
+
+.mobile-menu__socials {
+  display: flex;
+}
+
+.mobile-menu__socials-item {
+  padding: 0 10px;
+}
+.mobile-menu__socials-item:first-child {
+  padding-left: 0;
+}
+.mobile-menu__socials-item:last-child {
+  padding-right: 0;
+}
+.mobile-menu__socials-item:not(:last-child) {
+  border-right: 1px solid #212121;
+}
+
+.mobile-menu__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .hero {
@@ -637,15 +748,13 @@ input:-webkit-autofill {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  cursor: pointer;
+}
+.close-btn:hover .close-btn__icon {
+  fill: #2196f3;
 }
 
 .close-btn__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-btn:hover .close-btn__icon {
-  fill: #2196f3;
 }
 
 /* .modal-form{} */
