--- a/sass/components/_close-btn.scss
+++ b/sass/components/_close-btn.scss
@@ -8,13 +8,12 @@
     background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-    cursor: pointer;
+
+    &:hover .close-btn__icon {
+            fill: #2196f3;
+        }
 }
 
 .close-btn__icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-btn:hover .close-btn__icon {
-    fill: #2196f3;
 }
