--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,12 +7,13 @@
 }
 
 .header__container {
+    position: relative;
     display: flex;
     align-items: center;
 }
 
 .menu{
-    display: none;
+    display: flex;
     @media screen and (max-width:480px) {
         display: none;
     }
@@ -69,7 +70,8 @@
 
 .menu__contacts {
     display: flex;
-    gap: 50px;
+    flex-direction: column;
+    // gap: 50px;
 }
 
 .menu__contacts-link {
@@ -81,6 +83,10 @@
 
 .menu__contacts-icon {
     fill: currentColor;
+}
+
+.menu-toggle{
+
 }
 
 
