--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -14,6 +14,10 @@
     &.is-open {
             transform: translateX(0);
         }
+
+    @media screen and (min-width: 481px) {
+        display: none;
+    }
 }
 
 .js-menu-container {}
@@ -123,6 +127,8 @@
 }
 
 .mobile-menu__socials-item {
+    position: relative;
+
     padding: 0 10px;
 
     &:first-child {
@@ -133,9 +139,17 @@
         padding-right: 0;
     }
     
-    &:not(:last-child){
-    border-right: 1px solid #212121;
+    &:not(:last-child):after {
+        content: "";
+        position: absolute;
+        right: 0;        
+        width: 1px;
+        height: 22px;
+        background: rgba(33, 33, 33, 0.2);
     }
+
+    &:hover + .mobile-menu__socials-item:not(:last-child):after {
+        transform: rotate(90deg);}
 }
 
 .mobile-menu__socials-link {
