--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -11,9 +11,10 @@
 }
 
 .header__logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  // margin-right: 93px;
+  padding: 16px 0;
+  // padding-top: 24px;
+  // padding-bottom: 25px;
 }
 
 .logo--end-black {
