--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,12 @@ input:-webkit-autofill {
 .header__logo {
   padding: 16px 0;
 }
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding: 26px 0;
+    margin-right: 88px;
+  }
+}
 
 .logo--end-black {
   color: var(--logo--end-black);
@@ -135,6 +141,11 @@ input:-webkit-autofill {
 @media screen and (max-width: 480px) {
   .menu {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    justify-content: space-between;
   }
 }
 
@@ -1036,7 +1047,6 @@ input:-webkit-autofill {
 
 .subscription {
   width: 570px;
-  height: 86px;
 }
 
 .subscription__title {
