--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,8 +14,13 @@
 
 .menu{
     display: flex;
+    
     @media screen and (max-width:480px) {
         display: none;
+    }
+
+    @media screen and (min-width: 768px) {
+        justify-content: space-between;
     }
 }
 
