--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -15,6 +15,10 @@
   padding: 16px 0;
   // padding-top: 24px;
   // padding-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    padding: 26px 0;
+    margin-right: 88px;
+  }
 }
 
 .logo--end-black {
