--- a/css/main.css
+++ b/css/main.css
@@ -49,9 +49,23 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .button {
@@ -98,10 +112,17 @@ input:-webkit-autofill {
   display: block;
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: var(--logo-color);
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+  }
 }
 
 .header__logo {
@@ -111,6 +132,13 @@ input:-webkit-autofill {
   .header__logo {
     padding: 26px 0;
     margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 93px;
   }
 }
 
@@ -138,19 +166,19 @@ input:-webkit-autofill {
 .menu {
   display: flex;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .menu {
     display: none;
   }
 }
-@media screen and (min-width: 768px) {
-  .menu {
-    justify-content: space-between;
-  }
-}
 
 .menu__navigation {
-  margin-right: auto;
+  margin-right: 78px;
+}
+@media screen and (min-width: 1200px) {
+  .menu__navigation {
+    margin-right: 300px;
+  }
 }
 
 /* .navigation{} */
@@ -162,7 +190,7 @@ input:-webkit-autofill {
 .navigation__list-link,
 .menu__contacts-link {
   display: flex;
-  padding: 32px 0;
+  padding: 5px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation__list-link:hover,
@@ -177,6 +205,11 @@ input:-webkit-autofill {
 .navigation__list-link {
   position: relative;
   color: var(--nav-link-color);
+}
+@media screen and (min-width: 768px) {
+  .navigation__list-link {
+    padding: 32px 0;
+  }
 }
 
 .navigation__list-link--current {
@@ -196,15 +229,34 @@ input:-webkit-autofill {
 .menu__contacts {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .menu__contacts {
+    flex-direction: row;
+    gap: 50px;
+  }
 }
 
 .menu__contacts-link {
-  gap: 10px;
   align-items: center;
   color: var(--contact-link-color);
 }
+@media screen and (max-width: 767px) {
+  .menu__contacts-link {
+    font-size: 12px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu__contacts-link {
+    padding: 32px 0;
+  }
+}
 
 .menu__contacts-icon {
+  margin-right: 8px;
   fill: currentColor;
 }
 
@@ -213,7 +265,7 @@ input:-webkit-autofill {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   padding: 48px 40px;
   background-color: #fff;
   transform: translateX(100%);
@@ -221,7 +273,7 @@ input:-webkit-autofill {
 .mobile-menu-container.is-open {
   transform: translateX(0);
 }
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 768px) {
   .mobile-menu-container {
     display: none;
   }
@@ -246,7 +298,7 @@ input:-webkit-autofill {
   fill: currentColor;
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 768px) {
   .menu-toggle--open {
     display: none;
   }
@@ -254,6 +306,8 @@ input:-webkit-autofill {
 
 .mobile-menu {
   height: 100%;
+  max-width: 480px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -298,6 +352,11 @@ input:-webkit-autofill {
   letter-spacing: 0.02em;
   color: #2196F3;
 }
+@media screen and (max-width: 380px) {
+  .mobile-menu__contacts-item:first-child {
+    font-size: 27px;
+  }
+}
 
 .mobile-menu__contacts-link {
   display: block;
@@ -341,6 +400,16 @@ input:-webkit-autofill {
   letter-spacing: 0.02em;
   color: #2196F3;
 }
+@media screen and (max-width: 440px) {
+  .mobile-menu__socials-link {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .mobile-menu__socials-link {
+    font-size: 12px;
+  }
+}
 
 .hero {
   padding: 118px 0;
@@ -355,7 +424,7 @@ input:-webkit-autofill {
 
 .hero__title {
   margin: 0 auto 30px auto;
-  width: 360px;
+  max-width: 360px;
   text-align: center;
   font-weight: 900;
   font-size: 26px;
@@ -964,7 +1033,7 @@ input:-webkit-autofill {
   gap: 70px;
   align-items: baseline;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .footer__container {
     justify-content: center;
   }
@@ -973,14 +1042,14 @@ input:-webkit-autofill {
 .footer__logo {
   margin-bottom: 20px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .footer__logo {
     margin-bottom: 28px;
     text-align: center;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .footer__address {
     text-align: center;
   }
@@ -1034,7 +1103,7 @@ input:-webkit-autofill {
   text-transform: uppercase;
   color: #ffffff;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .join__title {
     text-align: center;
   }
@@ -1056,7 +1125,7 @@ input:-webkit-autofill {
   text-transform: uppercase;
   color: var(--title-text-bright-color);
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .subscription__title {
     text-align: center;
   }
@@ -1065,7 +1134,7 @@ input:-webkit-autofill {
 .subscription__form {
   display: flex;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .subscription__form {
     flex-wrap: wrap;
     justify-content: center;
@@ -1088,7 +1157,7 @@ input:-webkit-autofill {
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .subscription__form-input {
     width: 100%;
     margin-bottom: 20px;
