--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -15,17 +15,19 @@
 .menu{
     display: flex;
     
-    @media screen and (max-width:480px) {
+    @media screen and (max-width: 767px) {
         display: none;
-    }
-
-    @media screen and (min-width: 768px) {
-        justify-content: space-between;
     }
 }
 
 .menu__navigation {
-    margin-right: auto;
+    // display: block;
+    // margin-right: auto;
+    margin-right: 78px;
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 300px;
+    }
 }
 
 /* .navigation{} */
@@ -38,7 +40,7 @@
 .navigation__list-link,
 .menu__contacts-link {
     display: flex;
-    padding: 32px 0;
+    padding: 5px 0;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -55,6 +57,10 @@
     position: relative;
 
     color: var(--nav-link-color);
+
+    @media screen and (min-width: 768px) {
+        padding: 32px 0;
+    }
 }
 
 .navigation__list-link--current {
@@ -76,17 +82,32 @@
 .menu__contacts {
     display: flex;
     flex-direction: column;
-    // gap: 50px;
+    justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        gap: 50px;
+    }
 }
 
 .menu__contacts-link {
-    gap: 10px;
     align-items: center;
 
     color: var(--contact-link-color);
+
+    @media screen and (max-width: 767px) {
+        font-size: 12px;
+        line-height: calc(14 / 12);
+        letter-spacing: 0.02em;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding: 32px 0;
+    }
 }
 
 .menu__contacts-icon {
+    margin-right: 8px;
     fill: currentColor;
 }
 
