--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,7 +17,7 @@
 
 .hero__title {
     margin: 0 auto 30px auto;
-    width: 360px;
+    max-width: 360px;
     // width: 696px;
 
     text-align: center;
