--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,20 +4,30 @@
   font-family: 'Raleway', -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui,
     helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: calc(28 / 24);
   letter-spacing: 0.03em;
   color: var(--logo-color);
+
+  @media screen and (min-width: 1200px) {
+      font-size: 26px;
+      line-height: 1.19;
+      letter-spacing: 0.03em;
+  }
 }
 
 .header__logo {
-  // margin-right: 93px;
   padding: 16px 0;
-  // padding-top: 24px;
-  // padding-bottom: 25px;
+
   @media screen and (min-width: 768px) {
     padding: 26px 0;
     margin-right: 88px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
   }
 }
 
