--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
 
     padding: 48px 40px;
 
@@ -15,7 +15,7 @@
             transform: translateX(0);
         }
 
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: 768px) {
         display: none;
     }
 }
@@ -46,13 +46,15 @@
 }
 
 .menu-toggle--open{
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: 768px) {
         display: none;
     }
 }
 
 .mobile-menu {
     height: 100%;
+    max-width: 480px;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
@@ -108,6 +110,9 @@
         letter-spacing: 0.02em;
 
         color: #2196F3;
+        @media screen and (max-width: 380px) {
+           font-size: 27px; 
+        }
     }
 }
 
@@ -159,5 +164,13 @@
     letter-spacing: 0.02em;
     
     color: #2196F3;
+    
+    @media screen and (max-width: 440px) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: 380px) {
+        font-size: 12px;
+    }
 }
 
