--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -1,7 +1,9 @@
 .examples {
-    display: none;
-
     padding-top: 0;
+
+    @media screen and (max-width: 1199px) {
+        display: none;
+    }
 }
 
 .examples__title {
