--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -111,9 +111,27 @@
     fill: currentColor;
 }
 
-.menu-toggle{
+.menu__contacts-icon--letter{
+    width: 14px;
+    height: 10px;
 
+    @media screen and (min-width: 1200px) {
+        width: 16px;
+        height: 12px;
+    }
 }
+
+.menu__contacts-icon--phone{
+    width: 10px;
+    height: 14px;
+    
+    @media screen and (min-width: 1200px) {
+        width: 10px;
+        height: 16px;
+    }
+}
+
+
 
 
 // _____mobile_______
