--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -27,8 +27,11 @@ body {
 .section {
     padding-top: 60px;
     padding-bottom: 60px;
-    // padding-top: 94px;
-    // padding-bottom: 94px;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;    
+    }
 }
 
 .container {
