--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -9,7 +9,14 @@
 
 .benefits__item {
     width: 100%;
-    // flex-basis: calc((100% - 90px) / 4);
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+            flex-basis: calc((100% - 90px) / 4);
+    }
 }
 
 .benefits__item-icon-wrap {
@@ -17,7 +24,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    // width: 270px;
     height: 120px;
     margin-bottom: 30px;
 
@@ -33,7 +39,7 @@
     text-transform: uppercase;
     color: var(--title-text-color);
 
-    @media screen and (max-width:480px) {
+    @media screen and (max-width: 767px) {
         text-align: center;
     }
 }
