--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -4,16 +4,19 @@
 .clients__title {
 
     margin-bottom: 30px;   
- // margin-bottom: 50px;
 
     font-size: 28px;
     line-height: calc(33 / 28);
-    // font-size: 36px;
-    // line-height: calc(42 / 36);
     text-align: center;
     letter-spacing: 0.03em;
 
     color: #212121;
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+        font-size: 36px;
+        line-height: calc(42 / 36); 
+   }
 }
 .clients__list {
     display: flex;
@@ -22,9 +25,17 @@
 }
 .clients__item {
     flex-basis: calc((100% - 30px) / 2);
-    // flex-basis: calc((100% - 150px) / 6);
     max-width: 210px;
     height: 92px;
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 60px) / 3);
+        max-width: 226px;
+    }
+        
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 150px) / 6);
+    }
 }
 .clients__item-link {
     display: flex;
