--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,15 +4,18 @@
 
 .team__title {
     margin-bottom: 30px;
-    // margin-bottom: 50px;
 
     font-size: 28px;
     line-height: calc(33 / 28);
-    // font-size: 36px;
-    // line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+
+    @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+    }
 }
 
 .team__list {
@@ -25,7 +28,14 @@
 
 .team__list-item {
     width: 100%;
-    // width: calc((100% - 90px) / 4);
+    
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+    
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 90px) / 4);
+    }
 }
 
 .team-member {
@@ -40,7 +50,10 @@
     padding-top: 30px;
     padding-bottom: 24px;
 
-    // padding: 30px 32px;
+    @media screen and (min-width: 1200px) {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
 
 .team-member__title {
