--- a/css/main.css
+++ b/css/main.css
@@ -1113,13 +1113,14 @@ input:-webkit-autofill {
 .footer__container {
   display: flex;
   flex-wrap: wrap;
-  gap: 70px;
-  align-items: baseline;
+  gap: 60px;
+  justify-content: center;
 }
-@media screen and (max-width: 767px) {
-  .footer__container {
-    justify-content: center;
-  }
+
+.footer-contacts-join-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
 }
 
 .footer__logo {
@@ -1207,27 +1208,21 @@ input:-webkit-autofill {
   line-height: 1.1428571429;
   text-transform: uppercase;
   color: var(--title-text-bright-color);
-}
-@media screen and (max-width: 767px) {
-  .subscription__title {
-    text-align: center;
-  }
+  text-align: center;
 }
 
 .subscription__form {
   display: flex;
-}
-@media screen and (max-width: 767px) {
-  .subscription__form {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .subscription__form-input {
-  width: 358px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   padding: 15px 16px;
+  margin-bottom: 20px;
   background-color: inherit;
   outline: transparent;
   font-weight: 400;
@@ -1239,12 +1234,6 @@ input:-webkit-autofill {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (max-width: 767px) {
-  .subscription__form-input {
-    width: 100%;
-    margin-bottom: 20px;
-  }
 }
 .subscription__form-input:-webkit-autofill {
   -webkit-box-shadow: inset 0 0 0 50px #2f303a;
