--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,12 +7,17 @@
 .footer__container {
     display: flex;
     flex-wrap: wrap;
-    gap: 70px;
-    align-items: baseline;
+    gap: 60px;
+    // align-items: baseline;
 
-    @media screen and (max-width: 767px) {
-        justify-content: center;
-    }
+    justify-content: center;
+
+}
+
+.footer-contacts-join-wrap{
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
 }
 
 .footer__logo {
