--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,6 +1,5 @@
 .subscription {
     width: 570px;
-    // height: 86px;
 }
 
 .subscription__title {
@@ -10,25 +9,21 @@
     line-height: calc(16 / 14);
     text-transform: uppercase;
     color: var(--title-text-bright-color);
-
-    @media screen and (max-width: 767px) {
-        text-align: center;
-    }
+    text-align: center;
 }
 
 .subscription__form {
     display: flex;
-
-    @media screen and (max-width: 767px) {
-        flex-wrap: wrap;
-        justify-content: center;
-}
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .subscription__form-input {
-    width: 358px;
+    width: 100%;
+    max-width: 450px;
     height: 50px;
     padding: 15px 16px;
+    margin-bottom: 20px;
     // margin-right: 12px;
 
     background-color: inherit;
@@ -39,11 +34,6 @@
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-
-    @media screen and (max-width: 767px) {
-        width: 100%;
-        margin-bottom: 20px;
-    }
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
