--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -9,7 +9,10 @@
     line-height: calc(16 / 14);
     text-transform: uppercase;
     color: var(--title-text-bright-color);
-    text-align: center;
+
+    @media screen and (max-width: 1199px) {
+        text-align: center;
+    }
 }
 
 .subscription__form {
@@ -24,7 +27,6 @@
     height: 50px;
     padding: 15px 16px;
     margin-bottom: 20px;
-    // margin-right: 12px;
 
     background-color: inherit;
     outline: transparent;
@@ -40,6 +42,13 @@
     border-radius: 4px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 1200px) {
+        width: 358px;
+        margin-right: 12px;
+        margin-bottom: 0;
+    }
+
 
     &:-webkit-autofill {
         -webkit-box-shadow: inset 0 0 0 50px #2f303a;
