--- a/css/main.css
+++ b/css/main.css
@@ -449,6 +449,13 @@ input:-webkit-autofill {
   background-repeat: no-repeat;
   background-position: center;
 }
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding: 200px 0;
+  }
+}
 
 .hero__title {
   margin: 0 auto 30px auto;
@@ -460,6 +467,13 @@ input:-webkit-autofill {
   text-transform: uppercase;
   color: var(--title-text-bright-color);
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__btn {
