--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,34 +1,42 @@
 .hero {
     padding: 118px 0;
 
-    // padding: 200px 0;
     margin: 0 auto;
     width: 100%;
     height: 400px;
-    // max-width: 1600px;
-    // height: 600px;
+
 
     background-color: #c4c4c4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../images/hero-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
+
+    @media screen and (min-width: 1200px) {
+        max-width: 1600px;
+        height: 600px;
+
+        padding: 200px 0;
+    }
 }
 
 .hero__title {
     margin: 0 auto 30px auto;
     max-width: 360px;
-    // width: 696px;
 
     text-align: center;
     font-weight: 900;
     font-size: 26px;
     line-height: calc(42 / 26);
-    // font-size: 44px;
-    // line-height: 1.36;
     text-transform: uppercase;
     color: var(--title-text-bright-color);
     letter-spacing: 0.06em;
+
+    @media screen and (min-width: 1200px) {
+        max-width: 696px;
+        font-size: 44px;
+        line-height: 1.36;
+    }
 }
 
 .hero__btn {
