--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ input:-webkit-autofill {
 }
 @media screen and (min-width: 1200px) {
   .menu__navigation {
-    margin-right: 300px;
+    margin-right: 298px;
   }
 }
 
@@ -264,6 +264,11 @@ input:-webkit-autofill {
 .menu__contacts-icon {
   margin-right: 8px;
   fill: currentColor;
+}
+@media screen and (min-width: 1200px) {
+  .menu__contacts-icon {
+    margin-right: 10px;
+  }
 }
 
 .menu__contacts-icon--letter {
@@ -445,9 +450,34 @@ input:-webkit-autofill {
   width: 100%;
   height: 400px;
   background-color: #c4c4c4;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/index-hero-bg/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/index-hero-bg/hero-bg-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/index-hero-bg/hero-bg-tab.jpg);
+  }
+}
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/index-hero-bg/hero-bg-tab-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/index-hero-bg/hero-bg-desk.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/index-hero-bg/hero-bg-desk-2x.jpg);
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero {
@@ -477,8 +507,12 @@ input:-webkit-autofill {
 }
 
 .hero__btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  max-width: 200px;
   margin: 0 auto;
-  padding: 10px 32px;
+  padding: 10px 23px;
   display: flex;
   font-weight: 700;
   font-size: 16px;
@@ -1133,8 +1167,10 @@ input:-webkit-autofill {
 @media screen and (min-width: 1200px) {
   .footer__container {
     flex-direction: row;
+    align-items: baseline;
   }
 }
+
 .footer-contacts-join-wrap {
   display: flex;
   flex-direction: column;
@@ -1148,7 +1184,9 @@ input:-webkit-autofill {
 }
 @media screen and (min-width: 1200px) {
   .footer-contacts-join-wrap {
-    gap: 70px;
+    gap: 94px;
+    align-items: baseline;
+    margin-right: auto;
   }
 }
 
@@ -1169,10 +1207,6 @@ input:-webkit-autofill {
 }
 
 /* .footer__join{} */
-.footer__subscription {
-  margin-left: auto;
-}
-
 .add {
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
