--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,10 +8,41 @@
 
     background-color: #c4c4c4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/hero-img.jpg);
+        url(../../images/index-hero-bg/hero-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
 
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../../images/index-hero-bg/hero-bg-mob-2x.jpg);
+        }
+
+    @media screen and (min-width: 480px) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../../images/index-hero-bg/hero-bg-tab.jpg);
+            
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url(../../images/index-hero-bg/hero-bg-tab-2x.jpg);
+            }
+        }
+
+    @media screen and (min-width: 768px) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../../images/index-hero-bg/hero-bg-desk.jpg);
+    
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+                url(../../images/index-hero-bg/hero-bg-desk-2x.jpg);
+        }
+    }
+            
     @media screen and (min-width: 1200px) {
         max-width: 1600px;
         height: 600px;
@@ -40,8 +71,13 @@
 }
 
 .hero__btn {
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    max-width: 200px;
     margin: 0 auto;
-    padding: 10px 32px;
+    padding: 10px 23px;
     display: flex;
 
     font-weight: 700;
