--- a/css/main.css
+++ b/css/main.css
@@ -928,11 +928,17 @@ input:-webkit-autofill {
   position: fixed;
   top: 0;
   left: 0;
+  overflow-y: scroll;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 93px 15px;
+  }
 }
 
 .modal {
@@ -952,6 +958,14 @@ input:-webkit-autofill {
 .backdrop.is-hidden .modal {
   opacity: 0;
   transform: translate(-50%, -50%) perspective(200px) rotateY(0.5turn);
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    min-height: 609px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .modal__close-btn {
