--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    overflow-y: scroll;
 
     width: 100%;
     height: 100%;
@@ -10,6 +11,12 @@
     opacity: 1;
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and(max-width: 479px) {
+        padding: 93px 15px;
+    }
+
+
 }
 
 .modal {
@@ -34,6 +41,13 @@
     .backdrop.is-hidden &{
         opacity: 0;
         transform: translate(-50%, -50%) perspective(200px) rotateY(0.5turn);
+    }
+
+    @media screen and(max-width: 479px) {
+        min-height: 609px;
+        position: relative;
+        width: 100%;
+        height: 100%;
     }
 }
 
