--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,6 +11,7 @@
         url(../images/index-hero-bg/hero-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
 
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
