--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -129,6 +129,7 @@
 
 .mobile-menu__socials {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .mobile-menu__socials-item {
@@ -149,7 +150,7 @@
         position: absolute;
         right: 0;        
         width: 1px;
-        height: 22px;
+        height: 100%;
         background: rgba(33, 33, 33, 0.2);
     }
 
@@ -169,8 +170,8 @@
         font-size: 14px;
     }
 
-    @media screen and (max-width: 380px) {
-        font-size: 12px;
-    }
+    // @media screen and (max-width: 380px) {
+    //     font-size: 12px;
+    // }
 }
 
