--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,35 +19,53 @@
 
 }
 
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.modal{
+    position: relative;
 
-    width: 528px;
-    height: 581px;
-    visibility: visible;
+    width: 100%;
+    height: 100%;
+    height: 609px;
+
     padding: 40px;
 
     background-color: #fff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+            0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        .backdrop.is-hidden &{
+            opacity: 0;
+            transform: translate(-50%, -50%) perspective(200px) rotateY(0.5turn);
+        }
 
-    .backdrop.is-hidden &{
-        opacity: 0;
-        transform: translate(-50%, -50%) perspective(200px) rotateY(0.5turn);
+    @media screen and (max-width: 415px) {
+        padding: 40px 20px 40px 20px ;
+    }  
+
+    @media screen and (max-width: 375px) {
+        padding: 40px 10px 40px 10px;
     }
 
-    @media screen and(max-width: 479px) {
-        min-height: 609px;
-        position: relative;
-        width: 100%;
-        height: 100%;
+    @media screen and (max-width: 355px) {
+        padding: 40px 5px 40px 5px;
+    }
+
+    @media screen and (min-width: 480px) {
+        position: absolute;
+        top: 94px;
+        left: 50%;
+        transform: translate(-50%);
+
+        width: 450px;
+        height: 609px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 528px;
+        max-height: 581px;
     }
 }
 
@@ -62,12 +80,20 @@
 
     margin-bottom: 12px;
 
-    font-size: 20px;
-    line-height: calc(23 / 20);
-    text-align: center;
+    font-size: 19px;
+    line-height: calc(30 / 20);
     letter-spacing: 0.03em;
+    text-align: center;
 
     color: var(--title-text-color);
+
+    @media screen and (min-width: 480px) {
+        font-size: 20px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        line-height: calc(23 / 20);
+    }
 }
 
 /* .modal__form {
