--- a/sass/components/_policy.scss
+++ b/sass/components/_policy.scss
@@ -6,10 +6,28 @@
     align-items: center;
     justify-content: center;
 
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: calc(14 / 12);
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+
+    @media screen and (max-width: 465px) {
+        font-size: 11px;
+    }
+
+    @media screen and (max-width: 439px) {
+        font-size: 10px;
+    }
+
+    @media screen and (max-width: 345px) {
+        font-size: 9px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+    }
 }
 
 /* .policy__checkbox {
@@ -44,11 +62,15 @@
         content: '';
     
         position: absolute;
-        bottom: 5px;
+        bottom: 2px;
         left: 0;
     
         width: 100%;
         height: 1px;
         background: #2196f3;
+
+        @media screen and (mim-width: 1200px) {
+            bottom: 5px;
+        }
     }
 }
