fix-backdrepe-scroll

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -43,8 +43,8 @@
     }
 }
 
-.footer__contacts{
-}
+// .footer__contacts{
+// }
 
 .footer__address{
     @media screen and (max-width: 1199px) {
@@ -54,5 +54,5 @@
 
 /* .footer__join{} */
 
-.footer__subscription {
-}
+// .footer__subscription {
+// }
