--- a/css/main.css
+++ b/css/main.css
@@ -925,7 +925,6 @@ input:-webkit-autofill {
   position: fixed;
   top: 0;
   left: 0;
-  overflow-y: scroll;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
@@ -935,6 +934,11 @@ input:-webkit-autofill {
 @media screen and (max-width: 479px) {
   .backdrop {
     padding: 93px 15px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .backdrop {
+    overflow-y: scroll;
   }
 }
 
@@ -980,6 +984,8 @@ input:-webkit-autofill {
 }
 @media screen and (min-width: 1200px) {
   .modal {
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 528px;
     max-height: 581px;
   }
