--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,7 +2,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    overflow-y: scroll;
 
     width: 100%;
     height: 100%;
@@ -16,7 +15,9 @@
         padding: 93px 15px;
     }
 
-
+    @media screen and (max-width: 1199px) {
+        overflow-y: scroll;
+    }
 }
 
 .modal{
@@ -64,6 +65,9 @@
     }
 
     @media screen and (min-width: 1200px) {
+        top: 50%;
+        transform: translate(-50%, -50%);
+
         width: 528px;
         max-height: 581px;
     }
